# autonomous_5g_slicing_lab_ext

./: .env.example  .gitignore  FIX_AI_AGENT.md  GPU_SETUP_COMMANDS.md  KINETICA_CONFIG.md  NEMO_UI_INTEGRATION_SUMMARY.md  NEMO_UI_SETUP.md  README.md  SETUP_GUIDE.md  SOLUTION_SUMMARY.md  STREAMLIT_FIXED.md  STREAMLIT_GUIDE.md  nemo-ui.env.template  requirements.txt  setup_local_kinetica.py  test_kinetica.ipynb
agentic-llm/nat_wrapper/: .dockerignore  Dockerfile  README.md  pyproject.toml
agentic-llm/nat_wrapper/src/nat_5g_slicing/: __init__.py  profiler.py  (+3 more)
llm-slicing-5g-lab/: .dockerignore  .env  CMakeLists.txt  DLI_Lab_Setup.ipynb  build_ric_oai_ne.sh  change_rc_slice.sh  check_kinetica_status.py  continuous_traffic_generator.py  docker-compose-oai-cn-slice1.yaml  docker-compose-oai-cn-slice2.yaml  entrypoint.sh  generate_traffic.py  generate_traffic_fixed.py  kinetica  multi_ue.sh  requirements.txt  run_kinetica_headless.sh  start_ues_namespace.sh  stop_ues_namespace.sh  traffic_gen_FINAL.py  traffic_gen_v2.py
llm-slicing-5g-lab/.ipynb_checkpoints/: DLI_Lab_Setup-checkpoint.ipynb
llm-slicing-5g-lab/docker/: .dockerignore  Dockerfile.flexric  Dockerfile.gnb  Dockerfile.streamlit  Dockerfile.ue  PHASE2_TEST_RESULTS.md  PHASE3_SUMMARY.md  README.md  README_FLEXRIC.md  README_GNB.md  build_flexric.sh  build_gnb.sh  build_streamlit.sh  build_ue.sh  change_rc_slice_docker.sh  docker-compose-flexric.yaml  docker-compose-gnb.yaml  docker-compose-monitoring.yaml  docker-compose-ue-host.yaml  docker-compose-ue.yaml  gnb-docker.conf  kinetica-start.sh  lab_start.sh  lab_status.sh  lab_stop.sh  start_ue_slice2.sh  ue-slice1.conf  ue-slice2.conf  validate_dual_ue.sh
llm-slicing-5g-lab/ran-conf/: ue_1.conf  ue_2.conf
(+50 files in other folders)
